# church

./: .gitignore  README_ICECAST.md  STREAMING_GUIDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  feedback.md  main.py  pyproject.toml
backend/app/core/: config.py  constants.py  database.py  dependencies.py  deps.py  exceptions.py  logging.py  rbac.py
backend/app/middleware/: file_validation.py  security.py  validation.py
backend/app/models/: __init__.py  announcement.py  attendance.py  audit.py  content.py  event.py  form.py  giving.py  livestream.py  notification.py  permission.py  playlist.py  prayer.py  sermon.py  service_time.py  settings.py  stream.py  user.py
backend/app/routes/: announcements.py  auth.py  content.py  dashboard.py  events.py  forms.py  giving.py  health.py  livestreams.py  members.py  permissions.py  playlists.py  prayers.py  profile.py  roles.py  series.py  sermons.py  settings.py  users.py  websocket.py
backend/app/schemas/: __init__.py  announcement.py  attendance.py  audit.py  auth.py  content.py  event.py  form.py  giving.py  livestream.py  member.py  notification.py  permission.py  playlist.py  prayer.py  sermon.py  service_time.py  settings.py  stream.py  user.py
backend/app/services/: announcement_service.py  attendance_service.py  auth_service.py  content_service.py  (+15 more)
backend/migrations/: 001_initial_schema.py  env.py
backend/scripts/: check_database.py  check_db.py  check_permissions_table.py  create_admin.py  seed_permissions.py  seed_roles.py
backend/src/: server.js
(+199 files in other folders)
